--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -108,7 +108,7 @@
                         android:layout_height="wrap_content"
                         android:fontFamily="sans-serif-condensed"
                         android:lines="1"
-                        android:text=""
+                        android:text="Song"
                         android:textColor="#000000"
                         android:textSize="22sp" />
 
